--- a/Golf_Results_MVC/Views/Golfer/Details.cshtml
+++ b/Golf_Results_MVC/Views/Golfer/Details.cshtml
@@ -40,7 +40,7 @@
                     @Html.DisplayFor(modelItem => item.Competition.Name)
                 </td>
                 <td>
-                    @Html.DisplayFor(modelItem => item.StartDate.Year)
+                    @Html.DisplayFor(modelItem => item.Year)
                 </td>
                 <td>
                     @Html.DisplayFor(modelItem => item.GolferScore)
