Updated methods for CompController and amended htmls. Also found issue with naming Golfer prop as Year so changed to season

--- a/Golf_Results_MVC/Views/Competition/Details.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Details.cshtml
@@ -33,6 +33,29 @@
         <dd>
             @Html.DisplayFor(model => model.EndDate)
         </dd>
+        <dd>
+            <table class="table">
+                <tr>
+                    <th>Position</th>
+                    <th>Player</th>
+                    <th>Player Score</th>
+                </tr>
+                @foreach (var item in Model.Comp_Result)
+                {
+                    <tr>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Position)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Golfer.FullName)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.GolferScore)
+                        </td>
+                    </tr>
+                }
+            </table>
+        </dd>
 
     </dl>
 </div>
