Fixed Display for Comp Start and End Date and arranged Comp_Results sorted in Comp Details display by Position

--- a/Golf_Results_MVC/Views/Competition/Details.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Details.cshtml
@@ -40,7 +40,7 @@
                     <th>Player</th>
                     <th>Player Score</th>
                 </tr>
-                @foreach (var item in Model.Comp_Result)
+                @foreach (var item in Model.Comp_Result.OrderBy(i =>i.Position)) // Order by Position 
                 {
                     <tr>
                         <td>
