Changed Season in Comp_Result to Int as only need the Year. Changed Date formats for Comp. Changed Results to display only Dates instead of start and End date.

--- a/Golf_Results_MVC/Views/Competition/Details.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Details.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Details</h2>
+<h2>Results</h2>
 
 <div>
     <h4>Competition</h4>
@@ -18,20 +18,28 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
 
-        <dt>
+        @*<dt>
             @Html.DisplayNameFor(model => model.StartDate)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.StartDate)
-        </dd>
+        </dd>*@
 
-        <dt>
-            @Html.DisplayNameFor(model => model.EndDate)
+        @*<dt>
+            @Html.DisplayNameFor(model => model.StartDate)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.EndDate)
+        </dd>*@
+
+        <dt>
+            @Html.DisplayNameFor(model => model.FullDate)
+        </dt>
+
+        <dd>
+            @Html.DisplayFor(model => model.FullDate)
         </dd>
         <dd>
             <table class="table">
@@ -40,7 +48,7 @@
                     <th>Player</th>
                     <th>Player Score</th>
                 </tr>
-                @foreach (var item in Model.Comp_Result.OrderBy(i =>i.Position)) // Order by Position 
+                @foreach (var item in Model.Comp_Result.OrderBy(i => i.Position)) // Order by Position
                 {
                     <tr>
                         <td>
