--- a/Golf_Results_MVC/Views/Competition/Details.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Details.cshtml
@@ -18,37 +18,39 @@
             @Html.DisplayFor(model => model.Name)
         </dd>
 
-        @*<dt>
+        <dt>
             @Html.DisplayNameFor(model => model.StartDate)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.StartDate)
-        </dd>*@
+        </dd>
 
-        @*<dt>
+        <dt>
             @Html.DisplayNameFor(model => model.StartDate)
         </dt>
 
         <dd>
             @Html.DisplayFor(model => model.EndDate)
-        </dd>*@
-
-        <dt>
-            @Html.DisplayNameFor(model => model.FullDate)
-        </dt>
-
-        <dd>
-            @Html.DisplayFor(model => model.FullDate)
         </dd>
+
+        @*<dt>
+            @Html.DisplayNameFor(model => model.FullDate)
+        </dt>*@
+
+        @*<dd>
+            @Html.DisplayFor(model => model.FullDate)
+        </dd>*@
         <dd>
             <table class="table">
                 <tr>
                     <th>Position</th>
                     <th>Player</th>
                     <th>Player Score</th>
+                    <th>Season</th>
+
                 </tr>
-                @foreach (var item in Model.Comp_Result.OrderBy(i => i.Position)) // Order by Position
+                @foreach (var item in Model.Comp_Result.OrderByDescending(i => i.Season).ThenBy(c => c.Position)) // Order by Year then Position
                 {
                     <tr>
                         <td>
@@ -59,6 +61,9 @@
                         </td>
                         <td>
                             @Html.DisplayFor(modelItem => item.GolferScore)
+                        </td>
+                        <td>
+                            @Html.DisplayFor(modelItem => item.Season)
                         </td>
                     </tr>
                 }
