Amended Details to display end date instead of start date

--- a/Golf_Results_MVC/Views/Competition/Details.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Details.cshtml
@@ -27,7 +27,7 @@
         </dd>
 
         <dt>
-            @Html.DisplayNameFor(model => model.StartDate)
+            @Html.DisplayNameFor(model => model.EndDate)
         </dt>
 
         <dd>
