Added in a viewbag for a count of golfers

--- a/Golf_Results_MVC/Views/Golfer/Index.cshtml
+++ b/Golf_Results_MVC/Views/Golfer/Index.cshtml
@@ -42,8 +42,13 @@
         }
 
     </table>
+
     <br />
     Page @(Model.PageCount < Model.PageNumber ? 0 : Model.PageNumber) of @Model.PageCount
 
+    
+
     @Html.PagedListPager(Model, page => Url.Action("Index",
         new { page, sortOrder = ViewBag.CurrentSort, currentFilter = ViewBag.CurrentFilter }))
+
+    <label>Total Golfers:</label> @ViewBag.TotalGolfers
