Amended Order for Golfer Results where we add Results

--- a/Golf_Results_MVC/Views/Golfer/Details.cshtml
+++ b/Golf_Results_MVC/Views/Golfer/Details.cshtml
@@ -33,7 +33,7 @@
                     <th>Player Score</th>
                     <th>Position</th>
                 </tr>
-                @foreach (var item in Model.Comp_Result)
+                @foreach (var item in Model.Comp_Result.OrderByDescending(i => i.Season))
                 {
             <tr>
                 <td>
