Updated CompResult controller and API. Left only Create method.

--- a/Golf_Results_MVC/Views/Shared/_Layout.cshtml
+++ b/Golf_Results_MVC/Views/Shared/_Layout.cshtml
@@ -25,7 +25,7 @@
                         <li>@Html.ActionLink("Contact", "Contact", "Home")</li>-->
                     <li>@Html.ActionLink("Competitions", "Index", "Competition")</li>
                     <li>@Html.ActionLink("Golfers", "Index", "Golfer")</li>
-                    <li>@Html.ActionLink("CompResult", "Index", "CompResult")</li>
+                    <li>@Html.ActionLink("Results", "Create", "CompResult")</li>
                 </ul>
             </div>
         </div>
