Added link to Uploads in each create method

--- a/Golf_Results_MVC/Views/CompResult/Create.cshtml
+++ b/Golf_Results_MVC/Views/CompResult/Create.cshtml
@@ -82,6 +82,8 @@
 }
 
 <div>
+    <Label>Upload a List of Results @Html.ActionLink("Here", "UploadCompResults", "Import") </Label>
+    <br />
     <!--@Html.ActionLink("Back to List", "Index")-->
 </div>
 
