--- a/Golf_Results_MVC/Views/Competition/Create.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Create.cshtml
@@ -48,6 +48,8 @@
 }
 
 <div>
+    <Label>Upload a List of Competitions @Html.ActionLink("Here", "UploadComps", "Import") </Label>
+    <br />
     @Html.ActionLink("Back to List", "Index")
 </div>
 
