--- a/Golf_Results_MVC/Views/Golfer/Create.cshtml
+++ b/Golf_Results_MVC/Views/Golfer/Create.cshtml
@@ -40,6 +40,8 @@
 }
 
 <div>
+    <Label>Upload a List of Golfers @Html.ActionLink("Here", "UploadGolfers", "Import") </Label>
+    <br />
     @Html.ActionLink("Back to List", "Index")
 </div>
 
