--- a/Golf_Results_MVC/Views/Competition/Index.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Index.cshtml
@@ -9,7 +9,11 @@
 <h2>Index</h2>
 
 <p>
-    @Html.ActionLink("Create New", "Create")
+    <!-- Hidden Create view for all user bar Admin-->
+    @if (User.IsInRole("admin"))
+    {
+        @Html.ActionLink("Create New", "Create")
+    }
 </p>
 @using (Html.BeginForm("Index", "Competition", FormMethod.Get))
 {
@@ -46,9 +50,17 @@
             @Html.DisplayFor(modelItem => item.EndDate)
         </td>*@
         <td>
-            @Html.ActionLink("Edit", "Edit", new { id = item.ID }) |
-            @Html.ActionLink("Results", "Details", new { id = item.ID }) |
-            @Html.ActionLink("Delete", "Delete", new { id = item.ID })
+            <!-- Hidden Edit and Delete Links for all user bar Admin-->
+            @if (User.IsInRole("admin"))
+                    {
+                        @Html.ActionLink("Edit", "Edit", new { id = item.ID }) @: &nbsp;|&nbsp;
+                        @Html.ActionLink("Results", "Details", new { id = item.ID }) @: &nbsp;|&nbsp;
+                        @Html.ActionLink("Delete", "Delete", new { id = item.ID })  
+                    }
+                    else
+                    {
+                        @Html.ActionLink("Results", "Details", new { id = item.ID })
+                    }
         </td>
     </tr>
         }
