Removed unecessary comments, add descriptive comments. Added links for Comp and Golfers in Index page

--- a/Golf_Results_MVC/Views/CompResult/Create.cshtml
+++ b/Golf_Results_MVC/Views/CompResult/Create.cshtml
@@ -84,7 +84,7 @@
 <div>
     <Label>Upload a List of Results @Html.ActionLink("Here", "UploadCompResults", "Import") </Label>
     <br />
-    <!--@Html.ActionLink("Back to List", "Index")-->
+    <!--@Html.ActionLink("Back to List", "Index") removed index method-->
 </div>
 
 @section Scripts {
