--- a/Golf_Results_MVC/Views/Home/Index.cshtml
+++ b/Golf_Results_MVC/Views/Home/Index.cshtml
@@ -10,15 +10,16 @@
         <h2>Welcome to the Golf Results App</h2>
         <p>
             This app is designed to provide results for every
-            Competition and Golfer on the PGA Tour
+            Competition and Golfer on the PGA Tour. The service is free now for all so no 
+            need to login.
         </p>
     </div>
     <div class="col-md-4">
         <h2>Competitions</h2>
-        <p>Results of all the Competitions on the PGA Tour</p>
+        <p>View the Results for all <a href="~/Competition/Index">Competitions</a> on the PGA Tour!</p>
     </div>
     <div class="col-md-4">
         <h2>Golfers</h2>
-        <p>Results of all the Golfers on the PGA Tour</p>
+        <p>View the Results for all <a href="~/Golfer/Index">Golfers</a> for every competition on the PGA Tour!</p>
     </div>
 </div>
