--- a/Golf_Results_MVC/Views/Competition/Create.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Create.cshtml
@@ -22,23 +22,6 @@
                 @Html.ValidationMessageFor(model => model.Name, "", new { @class = "text-danger" })
             </div>
         </div>
-
-        @*<div class="form-group">
-            @Html.LabelFor(model => model.StartDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.StartDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.StartDate, "", new { @class = "text-danger" })
-            </div>
-        </div>
-
-        <div class="form-group">
-            @Html.LabelFor(model => model.EndDate, htmlAttributes: new { @class = "control-label col-md-2" })
-            <div class="col-md-10">
-                @Html.EditorFor(model => model.EndDate, new { htmlAttributes = new { @class = "form-control" } })
-                @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
-            </div>
-        </div>*@
-
         <div class="form-group">
             <div class="col-md-offset-2 col-md-10">
                 <input type="submit" value="Create" class="btn btn-default" />
@@ -48,7 +31,7 @@
 }
 
 <div>
-    <Label>Upload a List of Competitions @Html.ActionLink("Here", "UploadComps", "Import") </Label>
+    <Label>Upload a List of Competitions @Html.ActionLink("Here", "UploadComps", "Import") </Label> <!-- Allows us to upload comps through this link-->
     <br />
     @Html.ActionLink("Back to List", "Index")
 </div>
