--- a/Golf_Results_MVC/Views/Home/Contact.cshtml
+++ b/Golf_Results_MVC/Views/Home/Contact.cshtml
@@ -5,13 +5,13 @@
 <h3>@ViewBag.Message</h3>
 
 <address>
-    One Microsoft Way<br />
-    Redmond, WA 98052-6399<br />
+    TU Dublin, Tallaght<br />
+    D24 FKT9, Ireland.<br />
     <abbr title="Phone">P:</abbr>
-    425.555.0100
+    +353 1 404 2000
 </address>
 
 <address>
-    <strong>Support:</strong>   <a href="mailto:Support@example.com">Support@example.com</a><br />
-    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">Marketing@example.com</a>
+    <strong>Support:</strong>   <a href="mailto:Support@example.com">X00152190@mytudublin.ie</a><br />
+    <strong>Marketing:</strong> <a href="mailto:Marketing@example.com">X00152190@mytudublin.ie</a>
 </address>
