--- a/Golf_Results_MVC/Views/Manage/ManageLogins.cshtml
+++ b/Golf_Results_MVC/Views/Manage/ManageLogins.cshtml
@@ -12,8 +12,9 @@
     if (loginProviders.Count() == 0) {
         <div>
             <p>
-                There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
-                for details on setting up this ASP.NET application to support logging in via external services.
+                Not yet set up.. we'll add it soon!!
+                <!--There are no external authentication services configured. See <a href="https://go.microsoft.com/fwlink/?LinkId=313242">this article</a>
+                for details on setting up this ASP.NET application to support logging in via external services.-->
             </p>
         </div>
     }
