--- a/Golf_Results_MVC/Views/Competition/Index.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Index.cshtml
@@ -6,7 +6,7 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Index</h2>
+<h2>Competitions</h2>
 
 <p>
     <!-- Hidden Create view for all user bar admin-->
