--- a/Golf_Results_MVC/Views/Competition/Index.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Index.cshtml
@@ -6,7 +6,11 @@
     ViewBag.Title = "Index";
 }
 
-<h2>Competitions</h2>
+<div class="Comps">
+    <div class="jumbotron">
+        <h2>Competitions</h2>
+    </div>
+</div>
 
 <p>
     <!-- Hidden Create view for all user bar admin-->
