Add Comp_Results for Comp1 and amended Details view as wasn't returning results in the correct order

--- a/Golf_Results_MVC/Views/Competition/Details.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Details.cshtml
@@ -27,7 +27,7 @@
                     <th>Dates</th>
 
                 </tr>
-                @foreach (var item in Model.Comp_Result.OrderByDescending(i => i.Season).ThenBy(c => c.Position == null).ThenBy(d => d.Position)) // Order by Year then Position
+                @foreach (var item in Model.Comp_Result.OrderByDescending(i => i.Season).ThenBy(c => c.Position == c.Position)) //.ThenBy(d => d.Position)) // Order by Year then Position
                 {
                     <tr>
                         <td>
