--- a/Golf_Results_MVC/Views/Shared/_Layout.cshtml
+++ b/Golf_Results_MVC/Views/Shared/_Layout.cshtml
@@ -21,8 +21,9 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    <!--<li>@Html.ActionLink("About", "About", "Home")</li>
-                        <li>@Html.ActionLink("Contact", "Contact", "Home")</li>-->
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>*@
+                    @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
+
                     <li>@Html.ActionLink("Competitions", "Index", "Competition")</li>
                     <li>@Html.ActionLink("Golfers", "Index", "Golfer")</li>
                     <!-- Only to display Results to admins-->
@@ -32,6 +33,7 @@
                     }
                 </ul>
                 @Html.Partial("_LoginPartial")
+                
             </div>
         </div>
     </div>
@@ -39,7 +41,8 @@
         @RenderBody()
         <hr />
         <footer>
-            <p>&copy; @DateTime.Now.Year - Golf Results</p>
+            <label>@Html.ActionLink("Contact", "Contact", "Home")</label>
+            <p> &copy; @DateTime.Now.Year - Golf Results</p>
         </footer>
     </div>
 
