Amended layout more.

--- a/Golf_Results_MVC/Views/Home/Contact.cshtml
+++ b/Golf_Results_MVC/Views/Home/Contact.cshtml
@@ -7,7 +7,7 @@
 <address>
     TU Dublin, Tallaght<br />
     D24 FKT9, Ireland.<br />
-    <abbr title="Phone">P:</abbr>
+    <abbr title="Phone">Phone:</abbr>
     +353 1 404 2000
 </address>
 
