--- a/Golf_Results_MVC/Views/CompResult/Create.cshtml
+++ b/Golf_Results_MVC/Views/CompResult/Create.cshtml
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Add Results for Each Competition Here</h4>
+    <h4>Add Results for each Competition here</h4>
     <hr />
     <label>Competition Details</label>
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
