--- a/Golf_Results_MVC/Views/Shared/_Layout.cshtml
+++ b/Golf_Results_MVC/Views/Shared/_Layout.cshtml
@@ -21,9 +21,8 @@
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
                     <li>@Html.ActionLink("Home", "Index", "Home")</li>
-                    @*<li>@Html.ActionLink("About", "About", "Home")</li>*@
-                    @*<li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
-
+                    @*<li>@Html.ActionLink("About", "About", "Home")</li>
+                    <li>@Html.ActionLink("Contact", "Contact", "Home")</li>*@
                     <li>@Html.ActionLink("Competitions", "Index", "Competition")</li>
                     <li>@Html.ActionLink("Golfers", "Index", "Golfer")</li>
                     <!-- Only to display Results to admins-->
@@ -41,7 +40,12 @@
         @RenderBody()
         <hr />
         <footer>
-            <label>@Html.ActionLink("Contact", "Contact", "Home")</label>
+
+            <label>
+                @Html.ActionLink("About", "About", "Home") |
+                @Html.ActionLink("Contact", "Contact", "Home")
+            </label>
+
             <p> &copy; @DateTime.Now.Year - Golf Results</p>
         </footer>
     </div>
