Changed the style to superhero using Bootstrap 3 - https://bootswatch.com/3/

--- a/Golf_Results_MVC/Views/Golfer/Details.cshtml
+++ b/Golf_Results_MVC/Views/Golfer/Details.cshtml
@@ -57,6 +57,13 @@
     </dl>
 </div>
 <p>
-    @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) |
-    @Html.ActionLink("Back to List", "Index")
+    @if (User.IsInRole("admin"))
+    {
+        @Html.ActionLink("Edit", "Edit", new { id = Model.ID }) @: &nbsp;|&nbsp;
+        @Html.ActionLink("Back to List", "Index")
+    }
+    else
+    {
+        @Html.ActionLink("Back to List", "Index")
+    }
 </p>
