--- a/Golf_Results_MVC/Views/Competition/Details.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Details.cshtml
@@ -4,10 +4,10 @@
     ViewBag.Title = "Details";
 }
 
-<h2>Results</h2>
+<h2>Competition Results</h2>
 
 <div>
-    <h4>Competition</h4>
+    @*<h4>Competition</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
