--- a/Golf_Results_MVC/Views/CompResult/Create.cshtml
+++ b/Golf_Results_MVC/Views/CompResult/Create.cshtml
@@ -4,7 +4,7 @@
     ViewBag.Title = "Create";
 }
 
-<h2>Create Results</h2>
+<h2>Add Results</h2>
 
 
 @using (Html.BeginForm()) 
@@ -12,7 +12,7 @@
     @Html.AntiForgeryToken()
     
 <div class="form-horizontal">
-    <h4>Add Results for each Competition here</h4>
+    @*<h4>Add Results for each Competition here</h4>*@
     <hr />
     <label>Competition Details</label>
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
