--- a/Golf_Results_MVC/Views/Competition/Delete.cshtml
+++ b/Golf_Results_MVC/Views/Competition/Delete.cshtml
@@ -4,11 +4,11 @@
     ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Delete Competition</h2>
 <p class="error">@ViewBag.ErrorMessage</p>
-<h3>Are you sure you want to delete this?</h3>
+<h3>Are you sure you want to delete this Competition?</h3>
 <div>
-    <h4>Competition</h4>
+    @*<h4>Competition</h4>*@
     <hr />
     <dl class="dl-horizontal">
         <dt>
