--- a/Golf_Results_MVC/Views/CompResult/Create.cshtml
+++ b/Golf_Results_MVC/Views/CompResult/Create.cshtml
@@ -14,7 +14,7 @@
 <div class="form-horizontal">
     @*<h4>Add Results for each Competition here</h4>*@
     <hr />
-    <label>Competition Details</label>
+    <h4><label>Competition Details</label></h4>
     @Html.ValidationSummary(true, "", new { @class = "text-danger" })
     <div class="form-group">
         @Html.LabelFor(model => model.CompetitionID, "Competition", htmlAttributes: new { @class = "control-label col-md-2" })
@@ -47,8 +47,8 @@
             @Html.ValidationMessageFor(model => model.EndDate, "", new { @class = "text-danger" })
         </div>
     </div>
-
-    <label>Golfer Details</label>
+    <br />
+    <h4><label>Golfer Details</label></h4>
     <div class="form-group">
         @Html.LabelFor(model => model.GolferID, "Golfer", htmlAttributes: new { @class = "control-label col-md-2" })
         <div class="col-md-10">
