Just amended About and Contact Pages, and footer

--- a/Golf_Results_MVC/Views/Home/About.cshtml
+++ b/Golf_Results_MVC/Views/Home/About.cshtml
@@ -1,7 +1,7 @@
 ﻿@{
     ViewBag.Title = "About PGA Results";
 }
-<h2>@ViewBag.Title.</h2>
+<h2>@ViewBag.Title</h2>
 <h3>@ViewBag.Message</h3>
 
 <p>This website has been live since 2020. The purpose of this webpage is to provide easy access to PGA Tour Results for every Golfer and Competition. Users can view results regardless if they have an account or not.</p>
