--- a/Golf_Results_MVC/Views/Shared/_Layout.cshtml
+++ b/Golf_Results_MVC/Views/Shared/_Layout.cshtml
@@ -46,7 +46,7 @@
                 @Html.ActionLink("Contact", "Contact", "Home")
             </label>
 
-            <p> &copy; @DateTime.Now.Year - Golf Results</p>
+            <p> &copy; @DateTime.Now.Year - PGA Results App</p>
         </footer>
     </div>
 
