Just amended app name

--- a/Golf_Results_MVC/Views/Shared/_Layout.cshtml
+++ b/Golf_Results_MVC/Views/Shared/_Layout.cshtml
@@ -16,7 +16,7 @@
                     <span class="icon-bar"></span>
                     <span class="icon-bar"></span>
                 </button>
-                @Html.ActionLink("PGA Results", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
+                @Html.ActionLink("Golf Results", "Index", "Home", new { area = "" }, new { @class = "navbar-brand" })
             </div>
             <div class="navbar-collapse collapse">
                 <ul class="nav navbar-nav">
@@ -46,7 +46,7 @@
                 @Html.ActionLink("Contact", "Contact", "Home")
             </label>
 
-            <p> &copy; @DateTime.Now.Year - PGA Results App</p>
+            <p> &copy; @DateTime.Now.Year - Golf Results App</p>
         </footer>
     </div>
 
